Publish protocol as nuget

--- a/protocol/src/Irrelephant.Outcast.Protocol/Irrelephant.Outcast.Protocol.csproj
+++ b/protocol/src/Irrelephant.Outcast.Protocol/Irrelephant.Outcast.Protocol.csproj
@@ -4,6 +4,8 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <IsPackable>true</IsPackable>
+        <PackageId>Irrelephant.Outcast.Protocol</PackageId>
     </PropertyGroup>
 
 </Project>
