--- a/server/src/Irrelephant.Outcast.Server/Irrelephant.Outcast.Server.csproj
+++ b/server/src/Irrelephant.Outcast.Server/Irrelephant.Outcast.Server.csproj
@@ -15,11 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.4" />
+      <PackageReference Include="Irrelephant.Outcast.Protocol" />
+      <PackageReference Include="Microsoft.Extensions.Logging.Console" />
     </ItemGroup>
-
-    <ItemGroup>
-      <ProjectReference Include="..\Irrelephant.Outcast.Protocol\Irrelephant.Outcast.Protocol.csproj" />
-    </ItemGroup>
-
 </Project>
