--- a/server/src/Irrelephant.Outcast.TestClient/Irrelephant.Outcast.TestClient.csproj
+++ b/server/src/Irrelephant.Outcast.TestClient/Irrelephant.Outcast.TestClient.csproj
@@ -8,7 +8,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Irrelephant.Outcast.Protocol\Irrelephant.Outcast.Protocol.csproj" />
+      <PackageReference Include="Irrelephant.Outcast.Protocol" />
     </ItemGroup>
-
 </Project>
