--- a/protocol/src/Irrelephant.Outcast.Protocol.Abstractions/Irrelephant.Outcast.Protocol.Abstractions.csproj
+++ b/protocol/src/Irrelephant.Outcast.Protocol.Abstractions/Irrelephant.Outcast.Protocol.Abstractions.csproj
@@ -1,11 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net9.0</TargetFramework>
+        <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>true</IsPackable>
-        <PackageId>Irrelephant.Outcast.Protocol</PackageId>
+        <PackageId>Irrelephant.Outcast.Protocol.Abstractions</PackageId>
+        <RootNamespace>Irrelephant.Outcast.Protocol.Abstractions</RootNamespace>
     </PropertyGroup>
 
 </Project>
