--- a/.github/workflows/ci.protocol.yaml
+++ b/.github/workflows/ci.protocol.yaml
@@ -3,11 +3,12 @@ name: "CI"
 on:
   pull_request:
     path:
+      - ".github/**"
       - "protocol/**"
 
 jobs:
   validate:
     name: "Build & Test"
-    uses: ./.github/workflows/jobs/validate.yml
+    uses: ./.github/workflows/validate.yml
     with:
       target: "protocol/Irrelephant.Outcast.Protocol.sln"
