--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -26,4 +26,12 @@ jobs:
 
       - run: dotnet restore --locked-mode ${{ inputs.target }}
 
-      - run: dotnet test --no-build
+      - run: dotnet build --configuration=${{ inputs.configuration }} ${{ inputs.target }}
+
+      - run: dotnet pack --configuration=${{ inputs.configuration }}
+
+      - run: |
+          dotnet nuget push \
+            --source="Irrelephant Github
+            --api-key=${{ secrets.GITHUB_TOKEN }}
+            "protocol/src/Irrelephant.Outcast.Protocol.Abstractions/bin/Release/Irrelephant.Outcast.Protocol.Abstractions.1.0.0.nupkg" \
