--- a/NuGet.config
+++ b/NuGet.config
@@ -5,7 +5,7 @@
   </config>
   <packageSources>
     <clear />
-    <add key="Local Packages" value="D:\local-feed"/>
+    <add key="Irrelephant NuGet" value="https://nuget.pkg.github.com/irrelephant-io/index.json"/>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
   </packageSources>
   <activePackageSource>
