--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -26,4 +26,4 @@ jobs:
 
       - run: dotnet restore --locked-mode ${{ inputs.target }}
 
-      - run: dotnet test --no-build
+      - run: dotnet test --no-build ${{ inputs.target }}
