--- a/.github/workflows/nuget.publish.yaml
+++ b/.github/workflows/nuget.publish.yaml
@@ -34,4 +34,4 @@ jobs:
           dotnet nuget push \
             --source="Irrelephant Github
             --api-key=${{ secrets.GITHUB_TOKEN }}
-            "protocol/src/Irrelephant.Outcast.Protocol.Abstractions/bin/Release/Irrelephant.Outcast.Protocol.Abstractions.1.0.0.nupkg" \
+            "protocol/src/Irrelephant.Outcast.Protocol.Abstractions/bin/Release/Irrelephant.Outcast.Protocol.Abstractions.1.0.0.nupkg"
