--- a/NuGet.config
+++ b/NuGet.config
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <config>
-    <add key="defaultPushSource" value="D:\local-feed"/>
+    <add key="defaultPushSource" value="https://nuget.pkg.github.com/irrelephant-io/index.json"/>
   </config>
   <packageSources>
     <clear />
