--- a/.github/workflows/nuget.publish.yaml
+++ b/.github/workflows/nuget.publish.yaml
@@ -32,6 +32,6 @@ jobs:
 
       - run: |
           dotnet nuget push \
-            --source="Irrelephant Github"
-            --api-key=${{ secrets.GITHUB_TOKEN }}
-            "protocol/src/Irrelephant.Outcast.Protocol.Abstractions/bin/Release/Irrelephant.Outcast.Protocol.Abstractions.1.0.0.nupkg"
+            --source="Irrelephant Github" \
+            --api-key="${{ secrets.GITHUB_TOKEN }}" \
+            "protocol/src/Irrelephant.Outcast.Protocol.Abstractions/bin/Release/Irrelephant.Outcast.Protocol.Abstractions.1.0.0.nupkg" \
