--- a/.github/workflows/nuget.publish.yaml
+++ b/.github/workflows/nuget.publish.yaml
@@ -7,10 +7,16 @@ on:
         description: 'Solution to Validate'
         required: true
         type: string
+
       configuration:
         description: 'Configuration of the Build'
         required: false
         default: 'Release'
+        type: string
+
+      version:
+        description: 'Version of the package to Publish'
+        required: true
         type: string
 
 jobs:
@@ -28,10 +34,14 @@ jobs:
 
       - run: dotnet build --configuration=${{ inputs.configuration }} ${{ inputs.target }}
 
-      - run: dotnet pack --configuration=${{ inputs.configuration }} ${{ inputs.target }}
+      - run: |
+          dotnet pack \
+            --configuration=${{ inputs.configuration }} \
+            /p:Version=${{ inputs.version }}
+            ${{ inputs.target }}
 
       - run: |
           dotnet nuget push \
             --source="Irrelephant Github" \
             --api-key="${{ secrets.GITHUB_TOKEN }}" \
-            "protocol/src/Irrelephant.Outcast.Protocol.Abstractions/bin/Release/Irrelephant.Outcast.Protocol.Abstractions.1.0.0.nupkg"
+            "protocol/src/Irrelephant.Outcast.Protocol.Abstractions/bin/Release/Irrelephant.Outcast.Protocol.Abstractions.${{ inputs.version }}.nupkg"
