--- a/.github/workflows/nuget.publish.yaml
+++ b/.github/workflows/nuget.publish.yaml
@@ -40,6 +40,10 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
+
+      - name: Print new build number
+        run: echo "Build number is $BUILD_NUMBER"
+
       - run: |
           dotnet pack \
             --configuration=${{ inputs.configuration }} \
