--- a/.github/workflows/nuget.publish.yaml
+++ b/.github/workflows/nuget.publish.yaml
@@ -34,20 +34,10 @@ jobs:
 
       - run: dotnet build --configuration=${{ inputs.configuration }} ${{ inputs.target }}
 
-      - name: Generate build number
-        id: buildnumber
-        uses: einaregilsson/build-number@v2
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-
-      - name: Print new build number
-        run: echo "Build number is $BUILD_NUMBER"
-
       - run: |
           dotnet pack \
             --configuration=${{ inputs.configuration }} \
-            /p:Version=${{ steps.buildnumber.outputs.build_number }} \
+            /p:Version=${{ inputs.version }} \
             ${{ inputs.target }}
 
       - run: |
