Fix up workflows

--- a/.github/workflows/cd.protocol.yaml
+++ b/.github/workflows/cd.protocol.yaml
@@ -3,17 +3,17 @@ name: "CD"
 on:
   push:
     branches:
-      - master
+      - main
       - feature/ci-cd
 
 jobs:
-  # validate:
-  #   uses: ./.github/workflows/validate.yaml
-  #   with:
-  #     target: "protocol/Irrelephant.Outcast.Protocol.sln"
+  validate:
+    uses: ./.github/workflows/validate.yaml
+    with:
+      target: "protocol/Irrelephant.Outcast.Protocol.sln"
 
   publish:
-    # needs: validate
+    needs: validate
     uses: ./.github/workflows/nuget.publish.yaml
     with:
       target: "protocol/Irrelephant.Outcast.Protocol.sln"
