--- a/NuGet.config
+++ b/NuGet.config
@@ -11,4 +11,12 @@
   <activePackageSource>
     <add key="All" value="(Aggregate source)" />
   </activePackageSource>
+  <packageSourceMapping>
+    <packageSource key="nuget.org">
+      <package pattern="*" />
+    </packageSource>
+    <packageSource key="Irrelephant NuGet">
+      <package pattern="Irrelephant.*" />
+    </packageSource>
+  </packageSourceMapping>
 </configuration>
