--- a/server/src/Irrelephant.Outcast.TestClient/Irrelephant.Outcast.TestClient.csproj
+++ b/server/src/Irrelephant.Outcast.TestClient/Irrelephant.Outcast.TestClient.csproj
@@ -8,6 +8,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Irrelephant.Outcast.Protocol" />
+      <PackageReference Include="Irrelephant.Outcast.Protocol.Abstractions" />
     </ItemGroup>
 </Project>
