--- a/server/src/Irrelephant.Outcast.Server/Irrelephant.Outcast.Server.csproj
+++ b/server/src/Irrelephant.Outcast.Server/Irrelephant.Outcast.Server.csproj
@@ -15,7 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Irrelephant.Outcast.Protocol" />
+      <PackageReference Include="Irrelephant.Outcast.Protocol.Abstractions" />
       <PackageReference Include="Microsoft.Extensions.Logging.Console" />
     </ItemGroup>
 </Project>
