--- a/protocol/Directory.Packages.props
+++ b/protocol/Directory.Packages.props
@@ -8,6 +8,6 @@
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.13.0"/>
     <PackageVersion Include="xunit" Version="2.9.2"/>
     <PackageVersion Include="xunit.runner.visualstudio" Version="2.8.2"/>
-
+    <PackageVersion Include="Microsoft.Extensions.Options" Version="9.0.4"/>
   </ItemGroup>
 </Project>
