--- a/.github/workflows/nuget.publish.yaml
+++ b/.github/workflows/nuget.publish.yaml
@@ -3,6 +3,11 @@ name: Build & Publish
 on:
   workflow_call:
     inputs:
+      sdk:
+        description: 'Versions of the SDK'
+        required: true
+        type: string[]
+
       target:
         description: 'Solution to Validate'
         required: true
@@ -28,7 +33,7 @@ jobs:
 
       - uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.0.x'
+          dotnet-version: ${{ inputs.sdk }}
 
       - run: dotnet restore --locked-mode ${{ inputs.target }}
 
