--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -31,4 +31,4 @@ jobs:
 
       - run: dotnet build --no-restore ${{ inputs.target }} --configuration=${{ inputs.configuration }}
 
-      - run: dotnet test --no-build ${{ inputs.target }}
+      - run: dotnet test --no-build ${{ inputs.target }} --configuration=${{ inputs.configuration }}
