Update networking solution

--- a/.github/workflows/cd.networking.yaml
+++ b/.github/workflows/cd.networking.yaml
@@ -4,17 +4,16 @@ on:
   push:
     branches:
       - main
-      - feature/ci-cd
 
 jobs:
   validate:
     uses: ./.github/workflows/validate.yaml
     with:
-      target: "protocol/Irrelephant.Outcast.Protocol.sln"
+      target: "networking/Irrelephant.Outcast.Networking.sln"
 
   publish:
     needs: validate
     uses: ./.github/workflows/nuget.publish.yaml
     with:
-      target: "protocol/Irrelephant.Outcast.Protocol.sln"
+      target: "protocol/Irrelephant.Outcast.Networking.sln"
       version: "0.0.${{ github.run_number }}"
