--- a/networking/src/Irrelephant.Outcast.Networking.Protocol/Irrelephant.Outcast.Networking.Protocol.csproj
+++ b/networking/src/Irrelephant.Outcast.Networking.Protocol/Irrelephant.Outcast.Networking.Protocol.csproj
@@ -5,17 +5,12 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <IsPackable>true</IsPackable>
-        <PackageId>Irrelephant.Outcast.Networking.Transport</PackageId>
-        <RootNamespace>Irrelephant.Outcast.Networking.Transport</RootNamespace>
+        <PackageId>Irrelephant.Outcast.Networking.Protocol</PackageId>
+        <RootNamespace>Irrelephant.Outcast.Networking.Protocol</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\Irrelephant.Outcast.Networking.Protocol.Abstractions\Irrelephant.Outcast.Networking.Protocol.Abstractions.csproj" />
-      <ProjectReference Include="..\Irrelephant.Outcast.Networking.Transport.Abstractions\Irrelephant.Outcast.Networking.Transport.Abstractions.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Options" />
     </ItemGroup>
 
 </Project>
