Add simple display model for player&npc, add networked entity rotation when moving, add simple client side interpolation

--- a/server/src/Irrelephant.Outcast.Server/Irrelephant.Outcast.Server.csproj
+++ b/server/src/Irrelephant.Outcast.Server/Irrelephant.Outcast.Server.csproj
@@ -17,6 +17,7 @@
     <ItemGroup>
       <PackageReference Include="Arch" />
       <PackageReference Include="Irrelephant.Outcast.Networking.Protocol" />
+      <PackageReference Include="Irrelephant.Outcast.Networking.Protocol.Abstractions" />
       <PackageReference Include="Microsoft.Extensions.Logging.Console" />
       <PackageReference Include="Irrelephant.Outcast.Networking.Transport" />
     </ItemGroup>
