Add state machines for movement and attack systems, split components into own files

--- a/server/Irrelephant.Outcast.Server.Data/Irrelephant.Outcast.Server.Data.csproj
+++ b/server/Irrelephant.Outcast.Server.Data/Irrelephant.Outcast.Server.Data.csproj
@@ -11,6 +11,10 @@
       <Content Include="Entities\entities.0.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
+      <None Remove="Entities\Archetypes\mobs.0.json" />
+      <Content Include="Entities\Archetypes\mobs.0.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
