--- a/client/Irrelephant.Outcast.Client.csproj
+++ b/client/Irrelephant.Outcast.Client.csproj
@@ -9,4 +9,7 @@
     <PackageReference Include="Irrelephant.Outcast.Networking.Protocol" Version="0.0.22" />
     <PackageReference Include="Irrelephant.Outcast.Networking.Transport" Version="0.0.22" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="src\Ui\Interface\Components\" />
+  </ItemGroup>
 </Project>
