AI threat and response to attack, make server data into a nuget

--- a/server/src/Irrelephant.Outcast.Server.Data/Irrelephant.Outcast.Server.Data.csproj
+++ b/server/src/Irrelephant.Outcast.Server.Data/Irrelephant.Outcast.Server.Data.csproj
@@ -4,6 +4,9 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <IsPackable>true</IsPackable>
+        <PackageId>Irrelephant.Outcast.Server.Data</PackageId>
+        <RootNamespace>Irrelephant.Outcast.Server.Data</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
