--- a/server/src/Irrelephant.Outcast.Server/Irrelephant.Outcast.Server.csproj
+++ b/server/src/Irrelephant.Outcast.Server/Irrelephant.Outcast.Server.csproj
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
@@ -23,6 +24,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Irrelephant.Outcast.Server.Data\Irrelephant.Outcast.Server.Data.csproj" />
+      <ProjectReference Include="..\Irrelephant.Outcast.Server.Data\Irrelephant.Outcast.Server.Data.csproj" />
     </ItemGroup>
 </Project>
