--- a/.github/workflows/cd.networking.yaml
+++ b/.github/workflows/cd.networking.yaml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - main
-
+    path:
+      - ".github/**"
+      - "networking/**"
 jobs:
   validate:
     uses: ./.github/workflows/validate.yaml
