Update pipeline triggers

--- a/.github/workflows/cd.server.yaml
+++ b/.github/workflows/cd.server.yaml
@@ -12,7 +12,7 @@ jobs:
   validate:
     uses: ./.github/workflows/validate.yaml
     with:
-      target: "server/Irrelephant.Server.Networking.sln"
+      target: "server/Irrelephant.Outcast.Server.sln"
 
   publish:
     needs: validate
