--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -27,7 +27,10 @@ jobs:
             9.0.x
             8.0.x
 
-      - run: dotnet restore --locked-mode ${{ inputs.target }}
+      - name: nuget restore
+        run: dotnet restore --locked-mode ${{ inputs.target }}
+        env:
+          NuGetPackageSourceCredentials_Irrelepant: Username=${{ github.actor }};Password=${{ secrets.GITHUB_TOKEN }}
 
       - run: dotnet build --no-restore --configuration=${{ inputs.configuration }} ${{ inputs.target }}
 
