--- a/NuGet.config
+++ b/NuGet.config
@@ -5,7 +5,7 @@
   </config>
   <packageSources>
     <clear />
-    <add key="Irrelephant NuGet" value="https://nuget.pkg.github.com/irrelephant-io/index.json"/>
+    <add key="Irrelephant" value="https://nuget.pkg.github.com/irrelephant-io/index.json"/>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
   </packageSources>
   <activePackageSource>
@@ -15,7 +15,7 @@
     <packageSource key="nuget.org">
       <package pattern="*" />
     </packageSource>
-    <packageSource key="Irrelephant NuGet">
+    <packageSource key="Irrelephant">
       <package pattern="Irrelephant.*" />
     </packageSource>
   </packageSourceMapping>
