add explicit package read/write to jobs

--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -18,6 +18,8 @@ jobs:
   check:
     name: Build & Test
     runs-on: ubuntu-latest
+    permissions:
+      packages: read
     steps:
       - uses: actions/checkout@v4
 
