--- a/.github/workflows/nuget.publish.yaml
+++ b/.github/workflows/nuget.publish.yaml
@@ -23,6 +23,8 @@ jobs:
   check:
     name: Build & Publish
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
     steps:
       - uses: actions/checkout@v4
 
@@ -31,10 +33,6 @@ jobs:
           dotnet-version: |
             9.0.x
             8.0.x
-
-      - name: dotnet restore
-        run: dotnet restore --locked-mode ${{ inputs.target }}
-
 
       - name: dotnet build
         run: |
