--- a/.github/workflows/nuget.publish.yaml
+++ b/.github/workflows/nuget.publish.yaml
@@ -34,6 +34,8 @@ jobs:
             9.0.x
             8.0.x
 
+      - run: dotnet nuget list source
+
       - name: dotnet build
         run: |
           dotnet build \
