--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -29,6 +29,8 @@ jobs:
             9.0.x
             8.0.x
 
+      - run: dotnet nuget list source
+
       - name: dotnet build
         run: |
           dotnet build \
