--- a/.github/workflows/nuget.publish.yaml
+++ b/.github/workflows/nuget.publish.yaml
@@ -34,7 +34,10 @@ jobs:
             9.0.x
             8.0.x
 
-      - run: dotnet nuget list source
+      - name: Fix Nuget Credentials
+        run: |
+          dotnet nuget remove source Irrelephant
+          dotnet nuget add source --username=${{ github.actor }} --password=${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name Irrelephant "https://nuget.pkg.github.com/irrelephant-io/index.json"
 
       - name: dotnet build
         run: |
