--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -29,16 +29,16 @@ jobs:
             9.0.x
             8.0.x
 
-      - run: dotnet nuget remove source Irrelephant
-      - run: dotnet nuget add source --username=${{ github.actor }} --password=${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/irrelephant-io/index.json"
+      - name: Fix Nuget Credentials
+        run: |
+          dotnet nuget remove source Irrelephant
+          dotnet nuget add source --username=${{ github.actor }} --password=${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name Irrelephant "https://nuget.pkg.github.com/irrelephant-io/index.json"
       
       - name: dotnet build
         run: |
           dotnet build \
             --configuration=${{ inputs.configuration }} \
             ${{ inputs.target }}
-        env:
-          NuGetPackageSourceCredentials_Irrelepant: Username=${{ github.actor }};Password=${{ secrets.GITHUB_TOKEN }}
 
       - name: dotnet test
         run: dotnet test --no-build  --configuration=${{ inputs.configuration }} ${{ inputs.target }}
