--- a/.github/workflows/nuget.publish.yaml
+++ b/.github/workflows/nuget.publish.yaml
@@ -34,19 +34,22 @@ jobs:
             9.0.x
             8.0.x
 
-      - name: Fix Nuget Credentials
+      - name: dotnet restore
         run: |
-          dotnet nuget remove source Irrelephant
-          dotnet nuget add source --username=${{ github.actor }} --password=${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name Irrelephant "https://nuget.pkg.github.com/irrelephant-io/index.json"
+          dotnet nuget update source Irrelephant \
+            --username=${{ github.actor }} \
+            --password=${{ secrets.GITHUB_TOKEN }} \
+            --store-password-in-clear-text
+
+          dotnet restore --locked-mode ${{ inputs.target }}
 
       - name: dotnet build
         run: |
           dotnet build \
+            --no-restore \
             --configuration=${{ inputs.configuration }} \
             ${{ inputs.target }}
-        env:
-          NuGetPackageSourceCredentials_Irrelepant: Username=${{ github.actor }};Password=${{ secrets.GITHUB_TOKEN }}
-      
+
       - name: dotnet pack
         run: |
           dotnet pack \
