--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -29,14 +29,19 @@ jobs:
             9.0.x
             8.0.x
 
-      - name: Fix Nuget Credentials
+      - name: dotnet restore
         run: |
-          dotnet nuget remove source Irrelephant
-          dotnet nuget add source --username=${{ github.actor }} --password=${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name Irrelephant "https://nuget.pkg.github.com/irrelephant-io/index.json"
-      
+          dotnet nuget update source Irrelephant \
+            --username=${{ github.actor }} \
+            --password=${{ secrets.GITHUB_TOKEN }} \
+            --store-password-in-clear-text
+
+          dotnet restore --locked-mode ${{ inputs.target }}
+
       - name: dotnet build
         run: |
           dotnet build \
+            --no-restore \
             --configuration=${{ inputs.configuration }} \
             ${{ inputs.target }}
 
