--- a/server/src/Irrelephant.Outcast.Server.Data/Irrelephant.Outcast.Server.Data.csproj
+++ b/server/src/Irrelephant.Outcast.Server.Data/Irrelephant.Outcast.Server.Data.csproj
@@ -10,14 +10,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <EmbeddedResource Include="Resources\Entities\entities.0.json" />
       <None Remove="Entities\entities.0.json" />
-      <Content Include="Entities\entities.0.json">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </Content>
       <None Remove="Entities\Archetypes\mobs.0.json" />
-      <Content Include="Entities\Archetypes\mobs.0.json">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </Content>
+      <EmbeddedResource Include="Resources\Archetypes\mobs.0.json" />
     </ItemGroup>
 
 </Project>
